--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <b>14:00 - 15:00</b> Session 3
                 <ul style="text-align:justify">
                     <li><b>14:00 - 14:30</b> Universal Preprocessing Operators for Embedding Knowledge Graphs with Literals <span class="text-muted"> - Patryk Preisner, Heiko Paulheim</span>  (<a href="paper-5.pdf">paper</a>)</li>
-                    <li><b>14:30 - 15:00</b> NNKGC: Improving Knowledge Graph Completion with Node Neighborhoods <span class="text-muted"> - Irene Li, Boming Yang</span>  (<a href="paper-6.pdf">paper not yet available</a>)</li>
+                    <li><b>14:30 - 15:00</b> NNKGC: Improving Knowledge Graph Completion with Node Neighborhoods <span class="text-muted"> - Irene Li, Boming Yang</span>  (<a href="paper-6.pdf">paper</a>)</li>
                 </ul>
                 <hr />
                 <b>15:10 - 16:00</b> Coffee Break
