added ceur submission file

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <b>11:20 - 12:40</b> Session 2
                 <ul style="text-align:justify">
                     <li><b>11:20 - 11:50</b> Knowledge Graph Injection for Reinforcement Learning <span class="text-muted"> - Robert Wardenga, Liubov Kovriguina, Dmitrii Pliukhin, Daniil Radyush, Ivan Smoliakov, Yuan Xue, Henrik Müller, Aleksei Pismerov, Dmitry Mouromtsev, Daniel Kudenko</span>  (<a href="paper-2.pdf">paper</a>)</li>
-                    <li><b>11:50 - 12:20</b> Benchmarking the Abilities of Large Language Models for RDF Knowledge Graph Creation and Comprehension: How Well Do LLMs Speak Turtle? <span class="text-muted"> - Johannes Frey, L-P Meyer, Natanael Arndt, Felix Brei, Kirill Bulert</span>  (<a href="paper-3.pdf">paper</a>)</li>
+                    <li><b>11:50 - 12:20</b> Benchmarking the Abilities of Large Language Models for RDF Knowledge Graph Creation and Comprehension: How Well Do LLMs Speak Turtle? <span class="text-muted"> - Johannes Frey, Lars-Peter Meyer, Natanael Arndt, Felix Brei, Kirill Bulert</span>  (<a href="paper-3.pdf">paper</a>)</li>
                     <li><b>12:20 - 12:40</b> Leveraging Knowledge Graphs with Large Language Models for Classification Tasks in the Tourism Domain <span class="text-muted"> - Andrea Cadeddu, Alessandro Chessa, Vincenzo De Leo, Gianni Fenu, Enrico Motta, Francesco Osborne, Diego Reforgiato, Angelo Salatino, Luca Secchi</span>  (<a href="paper-4.pdf">paper</a>)</li>
                 </ul>
                 <hr />
