--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                     <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#toi">Topics of Interest</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#keynote">Keynote Speaker</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#keynote">Keynote Speakers</a></li>
                     <li class="nav-item"><a class="nav-link" href="#program">Workshop Program &nbsp; Proceedings</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="#submission">Submission Details</a></li>
@@ -136,8 +136,11 @@
     <section class="page-section" id="keynote">
         <div class="container">
             <div class="text-center">
-                <h2 class="section-heading text-uppercase">Keynote Speaker</h2>
-                <h3 class="text-uppercase">TBD</h3>
+                <h2 class="section-heading text-uppercase">Keynote Speakers</h2>
+                <h3 class="text-uppercase">Andrea Nuzzolese</h3>
+                <h4>Towards cognitive-based knowledge engineering</h4>
+                <h3 class="text-uppercase">Raphaël Troncy</h3>
+                <h4></h4>
             </div>
         </div>
     </section>
@@ -150,7 +153,7 @@
                 <hr />
                 <b>9:30 - 10:40</b> Session 1 
                 <ul style="text-align:justify">
-                    <li><b>9:30 - 10:10</b> Keynote Andrea Nuzzolese</li>
+                    <li><b>9:30 - 10:10</b> Keynote - Andrea Nuzzolese - Towards cognitive-based knowledge engineering</li>
                     <li><b>10:10 -10:40</b> Location Query Answering Using Box Embeddings <span class="text-muted"> - Eleni
                             Tsalapati, Markos Iliakis, Manolis Koubarakis</span> (<a href="paper-1.pdf">paper</a>)</li>
                 </ul>
@@ -177,7 +180,7 @@
                 <b>16:00 - 17:00</b> Session 4
                 <ul style="text-align:justify">
                     <li><b></b>16:00 - 16:20</b> Enhancing Scholarly Understanding: A Comparison of Knowledge Injection Strategies in Large Language Models <span class="text-muted"> - Vincenzo De Leo, Andrea Cadeddu, Alessandro Chessa, Gianni Fenu, Enrico Motta, Francesco Osborne, Diego Reforgiato, Angelo Salatino, Luca Secchi</span>  (<a href="paper-7.pdf">paper</a>)</li>
-                    <li><b>16:20 - 17:00</b> Keynote - TBC </li>
+                    <li><b>16:20 - 17:00</b> Keynote - Raphaël Troncy</li>
                 </ul>
             </div>
         </div>
