Added keynotes details

--- a/index.html
+++ b/index.html
@@ -139,8 +139,67 @@
                 <h2 class="section-heading text-uppercase">Keynote Speakers</h2>
                 <h3 class="text-uppercase">Andrea Nuzzolese</h3>
                 <h4>Towards cognitive-based knowledge engineering</h4>
+                <h5>Abstract</h5>
+                In recent years, a number of methodologies and tools have emerged in literature for building large knowledge graphs.
+                Most of the focus on knowledge engineering (KE) techniques, i.e. the collection of activities for eliciting, capturing,
+                conceptualising and formalising knowledge. However, KE tasks are extremely time-consuming and require a significant
+                cognitive effort by knowledge engineers. More recently large-language models have shown promising results in many tasks
+                related to knowledge engineering, such as knowledge extraction, ontology matching, schema induction, etc. An example is
+                ChatGPT that can be used smoothly for generating knowledge graphs even starting from scenarios or competency questions.
+                Following this research trend, neurosymbolic AI has been used for integrates neural and symbolic AI architectures to
+                address the weaknesses of each in the context of KE, providing a robust AI capable of reasoning, learning, and
+                generating knowledge graphs. But still a number of open issues remain open. One of them is about preserving the
+                cognitive-soundness of traditional KE methodologies that were entirely human-centred. Prompting LLM with human
+                metacognitive processes is a novel research direction that aims at instilling critical elements of human "thinking about
+                thinking" into LLMs. The hypothesis is that metacognitive prompting can enhance the quality and cognitive-soundness of
+                knowledge graphs resulting from KE processes.
+                <h5>Bio</h5>
+                Andrea Giovanni Nuzzolese is a Senior Researcher at the Institute of Cognitive Sciences and Technologies of the National
+                Research Council. He obtained his Ph.D. in Computer Science in 2014 from the University of Bologna, with a focus on
+                software methodologies and architectures for extracting Knowledge Patterns from the Web. His research interests include
+                knowledge engineering, ontology design, linked data, the Semantic Web, knowledge extraction from heterogeneous formats,
+                natural language understanding, and social and assistive robotics. He has participated as a researcher in the
+                "Interactive Knowledge Stack2" (IKS) project (EU FP7) and the MARIO project (EU H2020). Currently, he is the scientific
+                coordinator for ISTC-CNR in the Water Health Open Knowledge (WHOW) project (2019-EU-IA-0089 EU CEF Telecom - Public Open
+                Data), aimed at designing and implementing a framework to facilitate the creation of a vast ecosystem of data related to
+                water consumption and quality, health parameters, and disease prevalence for advanced analysis and the development of
+                innovative services. He is the lead researcher for ISTC-CNR in the Hybrid Human Artificial Collective Intelligence in
+                Open-Ended Domains (HACID) project (101070588 HORIZON-CL4-2021-DIGITAL-EMERGING-01-10), focused on developing a new
+                hybrid collective intelligence for decision support for professionals dealing with complex and open problems, promoting
+                engagement, equity, and trust. He also leads research units and is a member of the executive board of the Fostering Open
+                Science in Social Science Research (FOSSR) project (MUR PNRR IR IR0000008), which aims to become an Italian Open Science
+                Cloud, similar to the European Open Science Cloud project, integrating innovative services developed by the project for
+                data collection, management, and economic and social change data analysis, following the principle of equity. He is a
+                program committee member for semantic web and ontology engineering conferences and workshops. Additionally, he serves as
+                a reviewer for scientific journals such as the Semantic Web Journal and the Journal of Web Semantics. He is a co-founder
+                of BUP Srl, an innovative startup dedicated to designing and implementing solutions for creating and managing knowledge
+                graphs.
+                
                 <h3 class="text-uppercase">Raphaël Troncy</h3>
-                <h4></h4>
+                <h4>CIMPLE: Hybridizing Knowledge Graph and LLM for Explaining
+                    Factors Contributing to Misinformation</h4>
+                <h5>Abstract</h5>
+                In this talk, we will present some of the results of the CIMPLE project
+                that makes use of generative AI to counter information manipulation. We
+                present the CIMPLE Knowledge Graph that collects factchecks as well as
+                claims and social media posts that convey some misinformation. We
+                introduce the notion of factors that include political leaning, emotion,
+                sentiment, the usage of propaganda and persuasion techniques or the
+                support of conspiracy theories. We show to what extent LLM can be used
+                to label misinformation and we present preliminary experiments that
+                leverage knowledge graph embeddings to either identify misinformation
+                spreaders, or to provide a finer-grained characterization of the phenomenon.
+                <h5>Bio</h5>
+                Raphaël Troncy is an Associate Professor at the Data Science Department
+                of EURECOM, France since 2009, leading the Data-2-Knowledge team. His
+                main research interest concerns the use of semantic web technologies for
+                data integration, information extraction from text, tables and
+                multimedia documents, and recommender systems. He has applied his
+                research in diverse sectors such as Creative Industries, Cultural
+                Heritage, Tourism, Automotive, ICT and Energy where the goal has been to
+                produce specialized Knowledge Graphs and AI-based application for
+                discovering and interacting with the data. He was General Chair of The
+                Web Conference 2022 and he has published more than 250 papers.
             </div>
         </div>
     </section>
